--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/jest": "^29.0.3",
+    "@types/react": "^18.0.21",
+    "@types/react-native": "^0.70.3",
+    "@types/react-test-renderer": "^18.0.0",
+    "typescript": "^4.8.3"
   },
   "private": true
 }
