--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.3",
     "@types/react-test-renderer": "^18.0.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0"
   },
   "private": true
 }
