--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5",
-    "react-native-safe-area-context": "^4.3.4",
-    "react-native-screens": "^3.17.0",
+    "react-native": "0.69.6",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -24,14 +24,15 @@
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.3",
     "@types/react-test-renderer": "^18.0.0",
-    "typescript": "^4.8.3",
+    "@types/styled-components-react-native": "^5.1.3",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0"
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "typescript": "^4.8.3"
   },
   "private": true
 }
