--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,14 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react-native",
-    "lib": ["es2017"],
-    "types": ["react-native", "jest"],
+    "lib": [
+      "es2017"
+    ],
+    "types": [
+      "react-native",
+      "jest",
+      "@types/styled-components-react-native"
+    ],
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
@@ -17,5 +23,6 @@
     "babel.config.js",
     "metro.config.js",
     "jest.config.js"
-  ]
+  ],
+  "extends": "expo/tsconfig.base"
 }
