--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,20 +4,16 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "isolatedModules": true,
+    "baseUrl": "src",
     "jsx": "react-native",
-    "lib": [
-      "es2017"
-    ],
-    "types": [
-      "react-native",
-      "jest",
-      "@types/styled-components-react-native"
-    ],
+    "lib": ["es2017"],
+    "types": ["react-native", "jest", "@types/styled-components-react-native"],
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
     "target": "esnext"
   },
+  "include": ["src"],
   "exclude": [
     "node_modules",
     "babel.config.js",
