--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-cli": "^2.0.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-shadow-2": "^7.0.6",
+    "react-native-svg": "12.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
