--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start --clear",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "start tunnel": "expo start --tunnel"
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
@@ -16,6 +17,7 @@
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "exp": "^57.2.1",
     "expo": "~46.0.9",
     "expo-asset": "~8.6.1",
     "expo-font": "~10.2.0",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@expo/ngrok": "^4.1.0",
     "@types/jest": "^29.0.3",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.3",
