--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@react-navigation/stack": "^6.3.3",
     "exp": "^57.2.1",
     "expo": "~46.0.9",
     "expo-asset": "~8.6.1",
+    "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.12.1",
     "react": "18.0.0",
+    "react-hook-form": "^7.38.0",
     "react-native": "0.69.6",
     "react-native-asset": "^2.0.1",
     "react-native-cli": "^2.0.1",
