--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "0.2.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
@@ -23,6 +25,7 @@
     "expo-asset": "~8.6.1",
     "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.0",
+    "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.12.1",
     "react": "18.0.0",
@@ -30,10 +33,12 @@
     "react-native": "0.69.6",
     "react-native-asset": "^2.0.1",
     "react-native-cli": "^2.0.1",
+    "react-native-dropdown-picker": "^5.4.3",
     "react-native-pager-view": "5.4.24",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-shadow-2": "^7.0.6",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "12.3.0",
     "react-native-tab-view": "^3.3.0",
     "styled-components": "^5.3.5"
